Fix hr borders in post page on Safari.
git-svn-id: http://svn.habariproject.org/habari/trunk/htdocs/system@3004 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -2012,6 +2012,7 @@ ul.tabs li.ui-tabs-selected.last-child {
 	border-bottom: 1px solid #424242;
 	margin: 0 auto;
 	width: 770px;
+	border: none;
 }
 
 .styledformelement {
